<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/listFragment"
            android:icon="@drawable/baseline_coffee_24"
            android:title="@string/menu_coffee" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/favoritesFragment"
            android:icon="@drawable/favorite"
            android:title="@string/menu_favorites"/>
    </group>
    <group
        android:id="@+id/menu_bottom_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/cafeFragment"
            android:icon="@drawable/pin"
            android:title="@string/cafeStringed"/>
    </group>
</menu>