<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.example.lab_week_04.DetailFragment">

    <TextView
        android:id="@+id/coffee_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        tools:text="@string/affogato_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="20dp"
        android:background="?android:attr/dividerVertical" />

    <TextView
        android:id="@+id/coffee_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="@string/affogato_desc" />

    <!-- Buttons container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/back_button"
            android:layout_width="164dp"
            android:layout_height="59dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:padding="16dp"
            android:text="@string/back_button_label" />
        <!-- Favorite button -->
        <ImageButton
            android:id="@+id/fav_button"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/favorite_string_placeholder"
            android:src="@drawable/unfavorite"
            app:tint="@color/heartstruck"/>
    </LinearLayout>
</LinearLayout>
